tests/cases/semantics/incomplete_range_ending.hash
// stage=semantic, run=fail

main := () => {
  t := 1;

  match t {
    5..< => {},
    _ => {}
  }
}
